syntax = "proto3";

package order;

option go_package = "./pb";

import "google/protobuf/timestamp.proto";

service OrderService {
  rpc CreateOrder(CreateOrderRequest) returns (CreateOrderResponse);
  rpc GetOrders(GetOrdersRequest) returns (GetOrdersResponse);
  rpc UpdateOrder(UpdateOrderRequest) returns (UpdateOrderResponse);
  rpc DeleteOrder(DeleteOrderRequest) returns (DeleteOrderResponse);
}

message CreateOrderRequest {
  string guest_session_id = 1;
  string menu_item_id = 2;
  int32 quantity = 3;
}

message CreateOrderResponse {
  string status = 1;
}

message GetOrdersRequest {
  string guest_session_id = 1;
}

message GetOrdersResponse {
  repeated Order orders = 1;
}

message UpdateOrderRequest {
  string guest_session_id = 1;
  string order_id = 2;
  int32 quantity = 3;
}

message UpdateOrderResponse {
  string status = 1;
}

message DeleteOrderRequest {
  string order_id = 1;
  string guest_session_id = 2;
}

message DeleteOrderResponse {
  string status = 1;
}

message Order {
  string id = 1;
  string guest_session_id = 2;
  string menu_item_id = 3;
  int32 quantity = 4;
  google.protobuf.Timestamp order_time = 5;
}
